--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -4,7 +4,7 @@
 
 <head th:fragment="configFragment">
         <meta charset="UTF-8" />
-        <title>jpub book example</title>
+        <title>edodo book sample</title>
         <meta name="description" content=""/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <!-- 공통으로 쓰이는 css파일을넣는다.-->
