--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,7 +22,7 @@
  <div class="container">
 	 <div class="jumbotron">
 		 <h1>SpringBoot Tutorial</h1>
-		 <p>Jpub Java webService</p>
+		 <p>edodo Java webService</p>
 	 </div>
  </div>
  </div>
